@@ -103,7 +103,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 
 	// For rupture offset along fault parameter
 	private final static String RUP_OFFSET_PARAM_NAME ="Rupture Offset";
-	private Double DEFAULT_RUP_OFFSET_VAL= new Double(5);
+	private Double DEFAULT_RUP_OFFSET_VAL= Double.valueOf(5);
 	private final static String RUP_OFFSET_PARAM_UNITS = "km";
 	private final static String RUP_OFFSET_PARAM_INFO = "Length of offset for floating ruptures";
 	private final static double RUP_OFFSET_PARAM_MIN = 1;
@@ -112,7 +112,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 
 	// Grid spacing for fault discretization
 	private final static String GRID_SPACING_PARAM_NAME ="Fault Discretization";
-	private Double DEFAULT_GRID_SPACING_VAL= new Double(1.0);
+	private Double DEFAULT_GRID_SPACING_VAL= Double.valueOf(1.0);
 	private final static String GRID_SPACING_PARAM_UNITS = "km";
 	private final static String GRID_SPACING_PARAM_INFO = "Grid spacing of fault surface";
 	private final static double GRID_SPACING_PARAM_MIN = 0.1;
@@ -121,7 +121,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 
 	// For delta mag parameter (magnitude discretization)
 	private final static String DELTA_MAG_PARAM_NAME ="Delta Mag";
-	private Double DEFAULT_DELTA_MAG_VAL= new Double(0.1);
+	private Double DEFAULT_DELTA_MAG_VAL= Double.valueOf(0.1);
 	private final static String DELTA_MAG_PARAM_INFO = "Discretization of magnitude frequency distributions";
 	private final static double DELTA_MAG_PARAM_MIN = 0.005;
 	private final static double DELTA_MAG_PARAM_MAX = 0.5;
@@ -129,9 +129,9 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 
 	// For num realizations parameter
 	private final static String NUM_REALIZATIONS_PARAM_NAME ="Num Realizations";
-	private Integer DEFAULT_NUM_REALIZATIONS_VAL= new Integer(10);
-	private Integer NUM_REALIZATIONS_MIN= new Integer(1);
-	private Integer NUM_REALIZATIONS_MAX= new Integer(1000);
+	private Integer DEFAULT_NUM_REALIZATIONS_VAL= Integer.valueOf(10);
+	private Integer NUM_REALIZATIONS_MIN= Integer.valueOf(1);
+	private Integer NUM_REALIZATIONS_MAX= Integer.valueOf(1000);
 	private final static String NUM_REALIZATIONS_PARAM_INFO = "Number of Monte Carlo ERF realizations";
 	IntegerParameter numRealizationsParam;
 
@@ -163,11 +163,11 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 		timeSpan = new TimeSpan(TimeSpan.YEARS,TimeSpan.YEARS);
 		// set the duration constraint as a list of Doubles
 		ArrayList durationOptions = new ArrayList();
-		durationOptions.add(new Double(1));
-		durationOptions.add(new Double(5));
-		durationOptions.add(new Double(10));
-		durationOptions.add(new Double(20));
-		durationOptions.add(new Double(30));
+		durationOptions.add(Double.valueOf(1));
+		durationOptions.add(Double.valueOf(5));
+		durationOptions.add(Double.valueOf(10));
+		durationOptions.add(Double.valueOf(20));
+		durationOptions.add(Double.valueOf(30));
 		timeSpan.setDurationConstraint(durationOptions);
 		// set the start year - hard coded for now
 		timeSpan.setStartTimeConstraint(TimeSpan.START_YEAR,2002,2002);
@@ -419,7 +419,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 				// set the number of years in the timeSpan if it's the appropriate line
 				if(lineFromInputFile.endsWith(N_YEAR_STRING)) {
 					StringTokenizer st = new StringTokenizer(lineFromInputFile);
-					double nYrs = (new Double(st.nextToken())).doubleValue();
+					double nYrs = (Double.valueOf(st.nextToken())).doubleValue();
 					timeSpan.setDuration(nYrs);
 				}
 
@@ -441,13 +441,13 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 					st = new StringTokenizer(probModels);
 					//creating the double parameters for the prob. models based on what we info is given in the file
 					DoubleParameter empiricalParam = new DoubleParameter(this.EMPIRICAL,0,1,
-							new Double(Double.parseDouble(st.nextToken())));
+							Double.valueOf(Double.parseDouble(st.nextToken())));
 					DoubleParameter poisParam = new DoubleParameter(this.POISSON,0,1,
-							new Double(Double.parseDouble(st.nextToken())));
+							Double.valueOf(Double.parseDouble(st.nextToken())));
 					DoubleParameter bptStepParam = new DoubleParameter(this.BPT_STEP,0,1,
-							new Double(Double.parseDouble(st.nextToken())));
+							Double.valueOf(Double.parseDouble(st.nextToken())));
 					DoubleParameter bptParam = new DoubleParameter(this.BPT,0,1,
-							new Double(Double.parseDouble(st.nextToken())));
+							Double.valueOf(Double.parseDouble(st.nextToken())));
 
 					ParameterList paramList = new ParameterList();
 					//adding the parameters to the parameterList
@@ -458,7 +458,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 					//checking if there are 4 or 5 prob. models
 					if(numberOfProbModels ==5){
 						DoubleParameter timeParam = new DoubleParameter(this.TIME_PRED,0,1,
-								new Double(Double.parseDouble(st.nextToken())));
+								Double.valueOf(Double.parseDouble(st.nextToken())));
 						paramList.addParameter(timeParam);
 					}
 					//creating the instance of the TreeBranchWeightsParameter with name being the name of the fault
@@ -535,7 +535,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 					if(st.hasMoreTokens()) {
 						test = st.nextToken();
 						if(test.equals("ITERATIONS"))
-							iterationLineNumbers.add(new Integer(lineNum));
+							iterationLineNumbers.add(Integer.valueOf(lineNum));
 					}
 				}
 			}catch(Exception e){
@@ -616,7 +616,7 @@ public class WG02_FortranWrappedERF_EpistemicList extends AbstractEpistemicListE
 	public ArrayList getRelativeWeightsList() {
 		ArrayList relativeWeight  = new ArrayList();
 		for(int i=0; i<numIterations; i++)
-			relativeWeight.add(new Double(1.0));
+			relativeWeight.add(Double.valueOf(1.0));
 		return relativeWeight;
 	}
 
