@@ -109,10 +109,10 @@ public class AS_1997_AttenRel extends AttenuationRelationship {
 
 	// these were given to Ned Field by Norm Abrahamson over the phone
 	// (they're not given in their 1997 paper)
-	public final static Double MAG_WARN_MIN = new Double(4.5);
-	public final static Double MAG_WARN_MAX = new Double(8);
-	public final static Double DISTANCE_RUP_WARN_MIN = new Double(0.0);
-	public final static Double DISTANCE_RUP_WARN_MAX = new Double(200.0);
+	public final static Double MAG_WARN_MIN = Double.valueOf(4.5);
+	public final static Double MAG_WARN_MAX = Double.valueOf(8);
+	public final static Double DISTANCE_RUP_WARN_MIN = Double.valueOf(0.0);
+	public final static Double DISTANCE_RUP_WARN_MAX = Double.valueOf(200.0);
 
 	// The current set of coefficients based on the selected intensityMeasure
 	private Coefficients coeff = null;
@@ -181,7 +181,7 @@ public class AS_1997_AttenRel extends AttenuationRelationship {
 	@Override
 	public void setEqkRupture(EqkRupture eqkRupture) throws InvalidRangeException {
 
-		magParam.setValueIgnoreWarning(new Double(eqkRupture.getMag()));
+		magParam.setValueIgnoreWarning(Double.valueOf(eqkRupture.getMag()));
 		setFaultTypeFromRake(eqkRupture.getAveRake());
 		this.eqkRupture = eqkRupture;
 		setPropagationEffectParams();
@@ -676,7 +676,7 @@ public class AS_1997_AttenRel extends AttenuationRelationship {
 			Coefficients coeff = (Coefficients)
 			horzCoeffs.get(keys.nextElement());
 			if (coeff.period >= 0) {
-				set.add(new Double(coeff.period));
+				set.add(Double.valueOf(coeff.period));
 			}
 		}
 		Iterator it = set.iterator();
@@ -753,145 +753,145 @@ public class AS_1997_AttenRel extends AttenuationRelationship {
 
 		// SA/5.00
 		Coefficients coeff0 = new Coefficients(
-				SA_Param.NAME + '/' + (new Double("5.00")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("5.00")).doubleValue(),
 				5.00, 3.5, -1.46, -0.725, 0.4, -0.2, 0, 0.664, 0.04, -0.215, 0.89,
 				0.087);
 		// SA/4.00
 		Coefficients coeff1 = new Coefficients(
-				"SA/" + (new Double("4.00")).doubleValue(),
+				"SA/" + (Double.valueOf("4.00")).doubleValue(),
 				4.00, 3.5, -1.13, -0.725, 0.4, -0.2, 0.039, 0.64, 0.04, -0.1956, 0.88,
 				0.092);
 		// SA/3.00
 		Coefficients coeff2 = new Coefficients(
-				"SA/" + (new Double("3.00")).doubleValue(),
+				"SA/" + (Double.valueOf("3.00")).doubleValue(),
 				3.00, 3.5, -0.69, -0.725, 0.4, -0.156, 0.089, 0.63, 0.04, -0.1726, 0.87,
 				0.097);
 		// SA/2.00
 		Coefficients coeff3 = new Coefficients(
-				"SA/" + (new Double("2.00")).doubleValue(),
+				"SA/" + (Double.valueOf("2.00")).doubleValue(),
 				2.00, 3.5, -0.15, -0.725, 0.4, -0.094, 0.16, 0.61, 0.04, -0.14, 0.85,
 				0.105);
 		// SA/1.50
 		Coefficients coeff4 = new Coefficients(
-				"SA/" + (new Double("1.50")).doubleValue(),
+				"SA/" + (Double.valueOf("1.50")).doubleValue(),
 				1.50, 3.55, 0.26, -0.7721, 0.438, -0.049, 0.21, 0.6, 0.04, -0.12, 0.84,
 				0.11);
 		// SA/1.00
 		Coefficients coeff5 = new Coefficients(
-				"SA/" + (new Double("1.00")).doubleValue(),
+				"SA/" + (Double.valueOf("1.00")).doubleValue(),
 				1.00, 3.7, 0.828, -0.8383, 0.49, 0.013, 0.281, 0.423, 0, -0.102, 0.83,
 				0.118);
 		// SA/0.85
 		Coefficients coeff6 = new Coefficients(
-				"SA/" + (new Double("0.85")).doubleValue(),
+				"SA/" + (Double.valueOf("0.85")).doubleValue(),
 				0.85, 3.81, 1.02, -0.8648, 0.512, 0.038, 0.309, 0.37, -0.028, -0.0927,
 				0.82, 0.121);
 		// SA/0.75
 		Coefficients coeff7 = new Coefficients(
-				"SA/" + (new Double("0.75")).doubleValue(),
+				"SA/" + (Double.valueOf("0.75")).doubleValue(),
 				0.75, 3.9, 1.16, -0.8852, 0.528, 0.057, 0.331, 0.32, -0.05, -0.0862,
 				0.81, 0.123);
 		// SA/0.60
 		Coefficients coeff8 = new Coefficients(
-				"SA/" + (new Double("0.60")).doubleValue(),
+				"SA/" + (Double.valueOf("0.60")).doubleValue(),
 				0.60, 4.12, 1.428, -0.9218, 0.557, 0.091, 0.37, 0.194, -0.089, -0.074,
 				0.81, 0.127);
 		// SA/0.50
 		Coefficients coeff9 = new Coefficients(
-				"SA/" + (new Double("0.50")).doubleValue(),
+				"SA/" + (Double.valueOf("0.50")).doubleValue(),
 				0.50, 4.3, 1.615, -0.9515, 0.581, 0.119, 0.37, 0.085, -0.121, -0.0635,
 				0.8, 0.13);
 		// SA/0.46
 		Coefficients coeff10 = new Coefficients(
-				"SA/" + (new Double("0.46")).doubleValue(),
+				"SA/" + (Double.valueOf("0.46")).doubleValue(),
 				0.46, 4.38, 1.717, -0.9652, 0.592, 0.132, 0.37, 0.02, -0.136, -0.0594,
 				0.8, 0.132);
 		// SA/0.40
 		Coefficients coeff11 = new Coefficients(
-				"SA/" + (new Double("0.40")).doubleValue(),
+				"SA/" + (Double.valueOf("0.40")).doubleValue(),
 				0.40, 4.52, 1.86, -0.988, 0.61, 0.154, 0.37, -0.065, -0.16, -0.0518,
 				0.79, 0.135);
 		// SA/0.36
 		Coefficients coeff12 = new Coefficients(
-				"SA/" + (new Double("0.36")).doubleValue(),
+				"SA/" + (Double.valueOf("0.36")).doubleValue(),
 				0.36, 4.62, 1.955, -1.0052, 0.61, 0.17, 0.37, -0.123, -0.173, -0.046,
 				0.79, 0.135);
 		// SA/0.30
 		Coefficients coeff13 = new Coefficients(
-				"SA/" + (new Double("0.30")).doubleValue(),
+				"SA/" + (Double.valueOf("0.30")).doubleValue(),
 				0.30, 4.8, 2.114, -1.035, 0.61, 0.198, 0.37, -0.219, -0.195, -0.036,
 				0.78, 0.135);
 		// SA/0.24
 		Coefficients coeff14 = new Coefficients(
-				"SA/" + (new Double("0.24")).doubleValue(),
+				"SA/" + (Double.valueOf("0.24")).doubleValue(),
 				0.24, 4.97, 2.293, -1.079, 0.61, 0.232, 0.37, -0.35, -0.223, -0.0238,
 				0.77, 0.135);
 		// SA/0.20
 		Coefficients coeff15 = new Coefficients(
-				"SA/" + (new Double("0.20")).doubleValue(),
+				"SA/" + (Double.valueOf("0.20")).doubleValue(),
 				0.20, 5.1, 2.406, -1.115, 0.61, 0.26, 0.37, -0.445, -0.245, -0.0138,
 				0.77, 0.135);
 		// SA/0.17
 		Coefficients coeff16 = new Coefficients(
-				"SA/" + (new Double("0.17")).doubleValue(),
+				"SA/" + (Double.valueOf("0.17")).doubleValue(),
 				0.17, 5.19, 2.43, -1.135, 0.61, 0.26, 0.37, -0.522, -0.265, -0.004,
 				0.76, 0.135);
 		// SA/0.15
 		Coefficients coeff17 = new Coefficients(
-				"SA/" + (new Double("0.15")).doubleValue(),
+				"SA/" + (Double.valueOf("0.15")).doubleValue(),
 				0.15, 5.27, 2.407, -1.145, 0.61, 0.26, 0.37, -0.577, -0.28, 0.005, 0.75,
 				0.135);
 		// SA/0.12
 		Coefficients coeff18 = new Coefficients(
-				"SA/" + (new Double("0.12")).doubleValue(),
+				"SA/" + (Double.valueOf("0.12")).doubleValue(),
 				0.12, 5.39, 2.272, -1.145, 0.61, 0.26, 0.37, -0.591, -0.28, 0.018, 0.75,
 				0.135);
 		// SA/0.10
 		Coefficients coeff19 = new Coefficients(
-				"SA/" + (new Double("0.10")).doubleValue(),
+				"SA/" + (Double.valueOf("0.10")).doubleValue(),
 				0.10, 5.5, 2.16, -1.145, 0.61, 0.26, 0.37, -0.598, -0.28, 0.028, 0.74,
 				0.135);
 		// SA/0.09
 		Coefficients coeff20 = new Coefficients(
-				"SA/" + (new Double("0.09")).doubleValue(),
+				"SA/" + (Double.valueOf("0.09")).doubleValue(),
 				0.09, 5.54, 2.1, -1.145, 0.61, 0.26, 0.37, -0.609, -0.28, 0.03, 0.74,
 				0.135);
 		// SA/0.075
 		Coefficients coeff21 = new Coefficients(
-				"SA/" + (new Double("0.075")).doubleValue(),
+				"SA/" + (Double.valueOf("0.075")).doubleValue(),
 				0.075, 5.58, 2.037, -1.145, 0.61, 0.26, 0.37, -0.628, -0.28, 0.03, 0.73,
 				0.135);
 		// SA/0.06
 		Coefficients coeff22 = new Coefficients(
-				"SA/" + (new Double("0.06")).doubleValue(),
+				"SA/" + (Double.valueOf("0.06")).doubleValue(),
 				0.06, 5.6, 1.94, -1.145, 0.61, 0.26, 0.37, -0.665, -0.28, 0.03, 0.72,
 				0.135);
 		// SA/0.05
 		Coefficients coeff23 = new Coefficients(
-				"SA/" + (new Double("0.05")).doubleValue(),
+				"SA/" + (Double.valueOf("0.05")).doubleValue(),
 				0.05, 5.6, 1.87, -1.145, 0.61, 0.26, 0.37, -0.62, -0.267, 0.028, 0.71,
 				0.135);
 		// SA/0.04
 		Coefficients coeff24 = new Coefficients(
-				"SA/" + (new Double("0.04")).doubleValue(),
+				"SA/" + (Double.valueOf("0.04")).doubleValue(),
 				0.04, 5.6, 1.78, -1.145, 0.61, 0.26, 0.37, -0.555, -0.251, 0.0245, 0.71,
 				0.135);
 		// SA/0.03
 		Coefficients coeff25 = new Coefficients(
-				"SA/" + (new Double("0.03")).doubleValue(),
+				"SA/" + (Double.valueOf("0.03")).doubleValue(),
 				0.03, 5.6, 1.69, -1.145, 0.61, 0.26, 0.37, -0.47, -0.23, 0.0143, 0.7,
 				0.135);
 		// SA/0.02
 		Coefficients coeff26 = new Coefficients(
-				"SA/" + (new Double("0.02")).doubleValue(),
+				"SA/" + (Double.valueOf("0.02")).doubleValue(),
 				0.02, 5.6, 1.64, -1.145, 0.61, 0.26, 0.37, -0.417, -0.23, 0, 0.7, 0.135);
 		// SA/0.01
 		Coefficients coeff27 = new Coefficients(
-				"SA/" + (new Double("0.01")).doubleValue(),
+				"SA/" + (Double.valueOf("0.01")).doubleValue(),
 				0.01, 5.6, 1.64, -1.145, 0.61, 0.26, 0.37, -0.417, -0.23, 0, 0.7, 0.135);
 		// SA/0.0 -- same as 0.01
 		Coefficients coeff28 = new Coefficients(
-				"SA/" + (new Double("0.0")).doubleValue(),
+				"SA/" + (Double.valueOf("0.0")).doubleValue(),
 				0.00, 5.6, 1.64, -1.145, 0.61, 0.26, 0.37, -0.417, -0.23, 0, 0.7, 0.135);
 
 		horzCoeffs.put(coeff.getName(), coeff);
@@ -937,193 +937,193 @@ public class AS_1997_AttenRel extends AttenuationRelationship {
 
 		// SA/5.00
 		coeff0 = new Coefficients(SA_Param.NAME + '/' +
-				(new Double("5.00")).doubleValue(),
+				(Double.valueOf("5.00")).doubleValue(),
 				5.00, 2.50, -2.053, -0.7200,
 				0.260, -0.100, 0.240, 0.040,
 				-0.220, -0.0670, 0.78, 0.050);
 		// SA/4.00
 		coeff1 = new Coefficients("SA/" +
-				(new Double("4.00")).doubleValue(),
+				(Double.valueOf("4.00")).doubleValue(),
 				4.00, 2.50, -1.857, -0.7200,
 				0.260, -0.100, 0.240, 0.040,
 				-0.220, -0.0565, 0.75, 0.050);
 		// SA/3.00
 		coeff2 = new Coefficients("SA/" +
-				(new Double("3.00")).doubleValue(),
+				(Double.valueOf("3.00")).doubleValue(),
 				3.00, 2.50, -1.581, -0.7200,
 				0.260, -0.100, 0.240, 0.040,
 				-0.220, -0.0431, 0.72, 0.050);
 		// SA/2.00
 		coeff3 = new Coefficients("SA/" +
-				(new Double("2.00")).doubleValue(),
+				(Double.valueOf("2.00")).doubleValue(),
 				2.00, 2.50, -1.224, -0.7200,
 				0.260, -0.008, 0.240, 0.040,
 				-0.220, -0.0240, 0.69, 0.050);
 		// SA/1.50
 		coeff4 = new Coefficients("SA/" +
-				(new Double("1.50")).doubleValue(),
+				(Double.valueOf("1.50")).doubleValue(),
 				1.50, 2.50, -0.966, -0.7285,
 				0.260, 0.058, 0.240, 0.025,
 				-0.220, -0.0180, 0.69, 0.050);
 		// SA/1.00
 		coeff5 = new Coefficients("SA/" +
-				(new Double("1.00")).doubleValue(),
+				(Double.valueOf("1.00")).doubleValue(),
 				1.00, 2.50, -0.602, -0.7404,
 				0.260, 0.150, 0.240, 0.004,
 				-0.220, -0.0115, 0.69, 0.050);
 		// SA/0.85
 		coeff6 = new Coefficients("SA/" +
-				(new Double("0.85")).doubleValue(),
+				(Double.valueOf("0.85")).doubleValue(),
 				0.85, 2.50, -0.469, -0.7451,
 				0.309, 0.150, 0.273, -0.004,
 				-0.220, -0.0097, 0.69, 0.050);
 		// SA/0.75
 		coeff7 = new Coefficients("SA/" +
-				(new Double("0.75")).doubleValue(),
+				(Double.valueOf("0.75")).doubleValue(),
 				0.75, 2.50, -0.344, -0.7488,
 				0.348, 0.150, 0.299, -0.010,
 				-0.220, -0.0083, 0.69, 0.050);
 		// SA/0.60
 		coeff8 = new Coefficients("SA/" +
-				(new Double("0.60")).doubleValue(),
+				(Double.valueOf("0.60")).doubleValue(),
 				0.60, 2.85, -0.087, -0.7896,
 				0.416, 0.150, 0.345, -0.022,
 				-0.220, -0.0068, 0.69, 0.050);
 		// SA/0.50
 		coeff9 = new Coefficients("SA/" +
-				(new Double("0.50")).doubleValue(),
+				(Double.valueOf("0.50")).doubleValue(),
 				0.50, 3.26, 0.145, -0.8291, 0.471,
 				0.150, 0.383, -0.031, -0.220,
 				-0.0060, 0.69, 0.050);
 		// SA/0.46
 
 		coeff10 = new Coefficients("SA/" +
-				(new Double("0.46")).doubleValue(),
+				(Double.valueOf("0.46")).doubleValue(),
 				0.46, 3.45, 0.271, -0.8472,
 				0.497, 0.150, 0.400, -0.035,
 				-0.220, -0.0056, 0.69, 0.050);
 		// SA/0.40
 
 		coeff11 = new Coefficients("SA/" +
-				(new Double("0.40")).doubleValue(),
+				(Double.valueOf("0.40")).doubleValue(),
 				0.40, 3.77, 0.478, -0.8776,
 				0.539, 0.150, 0.428, -0.043,
 				-0.220, -0.0050, 0.69, 0.050);
 		// SA/0.36
 
 		coeff12 = new Coefficients("SA/" +
-				(new Double("0.36")).doubleValue(),
+				(Double.valueOf("0.36")).doubleValue(),
 				0.36, 4.01, 0.617, -0.9004,
 				0.571, 0.150, 0.450, -0.048,
 				-0.220, -0.0047, 0.69, 0.050);
 		// SA/0.30
 
 		coeff13 = new Coefficients("SA/" +
-				(new Double("0.30")).doubleValue(),
+				(Double.valueOf("0.30")).doubleValue(),
 				0.30, 4.42, 0.878, -0.9400,
 				0.580, 0.150, 0.488, -0.057,
 				-0.220, -0.0042, 0.69, 0.050);
 		// SA/0.24
 
 		coeff14 = new Coefficients("SA/" +
-				(new Double("0.24")).doubleValue(),
+				(Double.valueOf("0.24")).doubleValue(),
 				0.24, 4.93, 1.312, -1.0274,
 				0.580, 0.109, 0.533, -0.069,
 				-0.220, -0.0035, 0.69, 0.050);
 		// SA/0.20
 
 		coeff15 = new Coefficients("SA/" +
-				(new Double("0.20")).doubleValue(),
+				(Double.valueOf("0.20")).doubleValue(),
 				0.20, 5.35, 1.648, -1.0987,
 				0.580, 0.076, 0.571, -0.078,
 				-0.220, -0.0030, 0.69, 0.050);
 		// SA/0.17
 
 		coeff16 = new Coefficients("SA/" +
-				(new Double("0.17")).doubleValue(),
+				(Double.valueOf("0.17")).doubleValue(),
 				0.17, 5.72, 1.960, -1.1623,
 				0.580, 0.047, 0.604, -0.087,
 				-0.220, -0.0025, 0.70, 0.056);
 		// SA/0.15
 
 		coeff17 = new Coefficients("SA/" +
-				(new Double("0.15")).doubleValue(),
+				(Double.valueOf("0.15")).doubleValue(),
 				0.15, 6.00, 2.170, -1.2113,
 				0.580, 0.024, 0.630, -0.093,
 				-0.220, -0.0022, 0.72, 0.063);
 		// SA/0.12
 
 		coeff18 = new Coefficients("SA/" +
-				(new Double("0.12")).doubleValue(),
+				(Double.valueOf("0.12")).doubleValue(),
 				0.12, 6.00, 2.480, -1.2986,
 				0.580, -0.017, 0.630, -0.104,
 				-0.220, -0.0015, 0.74, 0.075);
 		// SA/0.10
 
 		coeff19 = new Coefficients("SA/" +
-				(new Double("0.10")).doubleValue(),
+				(Double.valueOf("0.10")).doubleValue(),
 				0.10, 6.00, 2.700, -1.3700,
 				0.580, -0.050, 0.630, -0.114,
 				-0.220, -0.0010, 0.76, 0.085);
 		// SA/0.09
 
 		coeff20 = new Coefficients("SA/" +
-				(new Double("0.09")).doubleValue(),
+				(Double.valueOf("0.09")).doubleValue(),
 				0.09, 6.00, 2.730, -1.3700,
 				0.567, -0.050, 0.630, -0.119,
 				-0.220, -0.0009, 0.76, 0.085);
 		// SA/0.075
 
 		coeff21 = new Coefficients("SA/" +
-				(new Double("0.075")).doubleValue(),
+				(Double.valueOf("0.075")).doubleValue(),
 				0.075, 6.00, 2.750, -1.3700,
 				0.545, -0.050, 0.630, -0.129,
 				-0.220, -0.0007, 0.76, 0.085);
 		// SA/0.06
 
 		coeff22 = new Coefficients("SA/" +
-				(new Double("0.06")).doubleValue(),
+				(Double.valueOf("0.06")).doubleValue(),
 				0.06, 6.00, 2.710, -1.3700,
 				0.518, -0.050, 0.630, -0.140,
 				-0.220, -0.0004, 0.76, 0.085);
 		// SA/0.05
 
 		coeff23 = new Coefficients("SA/" +
-				(new Double("0.05")).doubleValue(),
+				(Double.valueOf("0.05")).doubleValue(),
 				0.05, 6.00, 2.620, -1.3700,
 				0.496, -0.050, 0.630, -0.140,
 				-0.220, -0.0002, 0.76, 0.085);
 		// SA/0.04
 
 		coeff24 = new Coefficients("SA/" +
-				(new Double("0.04")).doubleValue(),
+				(Double.valueOf("0.04")).doubleValue(),
 				0.04, 6.00, 2.420, -1.3700,
 				0.469, -0.050, 0.630, -0.140,
 				-0.220, -0.0000, 0.76, 0.085);
 		// SA/0.03
 
 		coeff25 = new Coefficients("SA/" +
-				(new Double("0.03")).doubleValue(),
+				(Double.valueOf("0.03")).doubleValue(),
 				0.03, 6.00, 2.100, -1.3168,
 				0.432, -0.050, 0.630, -0.140,
 				-0.220, -0.0000, 0.76, 0.085);
 		// SA/0.02
 
 		coeff26 = new Coefficients("SA/" +
-				(new Double("0.02")).doubleValue(),
+				(Double.valueOf("0.02")).doubleValue(),
 				0.02, 6.00, 1.642, -1.2520,
 				0.390, -0.050, 0.630, -0.140,
 				-0.220, -0.0000, 0.76, 0.085);
 		// SA/0.01
 
 		coeff27 = new Coefficients("SA/" +
-				(new Double("0.01")).doubleValue(),
+				(Double.valueOf("0.01")).doubleValue(),
 				0.01, 6.00, 1.642, -1.2520,
 				0.390, -0.050, 0.630, -0.140,
 				-0.220, -0.0000, 0.76, 0.085);
 		// SA/0.0 -- same as 0.01
 		coeff28 = new Coefficients("SA/" +
-				(new Double("0.0")).doubleValue(),
+				(Double.valueOf("0.0")).doubleValue(),
 				0.00, 6.00, 1.642, -1.2520,
 				0.390, -0.050, 0.630, -0.140,
 				-0.220, -0.0000, 0.76, 0.085);
