@@ -15,9 +15,9 @@ public class DepthTo2pt5kmPerSecParam extends WarningDoubleParameter {
 	public final static String NAME = "Depth 2.5 km/sec";
 	public final static String UNITS = "km";
 	public final static String INFO = "The depth to where shear-wave velocity = 2.5 km/sec";
-//	public final static Double DEFAULT = new Double("1.0");
-	public final static Double MIN = new Double(0.0);
-	public final static Double MAX = new Double(30000.0);
+//	public final static Double DEFAULT = Double.valueOf("1.0");
+	public final static Double MIN = Double.valueOf(0.0);
+	public final static Double MAX = Double.valueOf(30000.0);
 
 
 	/**
